--- a/css/index.css
+++ b/css/index.css
@@ -29,7 +29,8 @@ footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 body {
-	line-height: 1;
+    line-height: 1;
+    
 }
 ol, ul {
 	list-style: none;
@@ -60,6 +61,7 @@ h1, h2, h3, h4, h5 {
     font-size: 18px;
     margin-bottom: 15px;
     font-family: 'Rubik', sans-serif;
+    font-weight: 400;
 }
 
 p {
@@ -209,4 +211,37 @@ footer nav {
 footer nav a {
     color: white;
     text-decoration: none;
+}
+
+.about-top-content{
+    margin: 20px 0%;
+    padding: 2%;
+    border-bottom: 1px dashed black;
+    
+}
+
+.about-middle-content{
+    display: flex;
+    
+}
+
+.about-middle-content div{
+    border-bottom: 1px dashed black;
+    margin: 2%;
+}
+
+button{
+    border: 2px solid black;
+    border-radius: 5px;
+    padding: 2%;
+    width: 30%;
+    margin: 5% 0%;
+    font-family: 'Rubik', sans-serif;
+    font-weight: 400;
+    background-color: white;
+}
+
+.about-bottom-content{
+    padding: 2%;
+    margin: 20px 0%;
 }
